# gcp-python-data-samples

./: README.md  pyproject.toml
barebones/: load_csv2bq.py  load_csv_zip2bq.py
create-sample-files/: create_csv.py
dask/: bq_storage_read.py  csv2avro.py
